--- a/microservices/app/app/src/todoList/todo/templates/homepage.html
+++ b/microservices/app/app/src/todoList/todo/templates/homepage.html
@@ -4,7 +4,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/static/custom.css">
+    <link rel="stylesheet" href="../static/custom.css">
   </head>
   <body class="background-color">
   		<div class="container-fluid box">
